@@ -67,6 +67,8 @@ if (isAppleMacWebKit()) {
     $result = system "sh", "-c", 'xcodebuild -project JavaScriptCore.xcodeproj -target jsc "$@" | grep -v setenv && exit ${PIPESTATUS[0]}', "xcodebuild",  @options, @ARGV, @coverageSupportOptions;
 } elsif (isAppleWinWebKit()) {
     $result = buildVisualStudioProject("JavaScriptCore.vcproj/JavaScriptCore.sln");
+} elsif (isChromium()) {
+    $result = buildSconsProject("JavaScriptCore");
 } elsif (isQt() or isGtk() or isWx()) {
     # Qt and Gtk build everything in one-shot. No need to build anything here.
     $result = 0;
